syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";
import "material_container_type.proto";
import "material_shelf_bin.proto";

message MaterialContainerInfo{
    string id=1;
    //编号
    string code=2;
    //描述
    string description=3;
    //识别码
    string identifier=4;
    //当前状态
    string currentState=5;
    //状态变更时间
    string lastUpdateTime=6;
    //备注
    string remark=7;
    //容器类型ID
    string materialContainerTypeID=8;
    MaterialContainerTypeInfo materialContainerType=9;
    //当前库位ID
    string materialShelfBinID=10;
    MaterialShelfBinInfo materialShelfBin=11;
}

message QueryMaterialContainerRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    //编号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=4;
    //当前状态
    // @inject_tag: uri:"currentState" form:"currentState"
    string currentState=5;
    //容器类型ID
    // @inject_tag: uri:"materialContainerTypeID" form:"materialContainerTypeID"
    string materialContainerTypeID=6;
}

message QueryMaterialContainerResponse{
    Code code=1;
    string message=2;
    repeated MaterialContainerInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMaterialContainerResponse{
    Code code=1;
    string message=2;
    repeated MaterialContainerInfo data=3;
}

message GetMaterialContainerDetailResponse{
    Code code=1;
    string message=2;
    MaterialContainerInfo data=3;
}